src/app/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .flex-center {
    @apply flex items-center justify-center;
  }

  .flex-between {
    @apply flex items-center justify-between;
  }

  .flex-start {
    @apply flex items-start justify-center;
  }
}

@layer components {
  .payment-category-chip {
    @apply flex flex-row items-center px-4 py-2 mr-2 mb-3 whitespace-nowrap rounded-full border border-border-dark;
  }
  .bottom-sheet-tab-btns {
    @apply flex-1 py-3 border-b-2;
  }
  .active-press-scale {
    @apply active:scale-95;
  }

  .error-message-container {
    @apply mx-5 mt-2 bg-red-500/10 border border-red-700 rounded p-2;
  }

  .error-text {
    @apply text-red-500 text-sm;
  }

  .form-wrapper {
    @apply flex flex-col gap-3 mt-6;
  }

  .form-group {
    @apply flex flex-col w-full gap-y-3 border-border-light border-b screen-x-padding justify-center h-28;
  }

  .form-input {
    @apply w-full flex flex-row items-center gap-x-2.5;
  }

  .icon-wrapper {
    @apply w-10;
  }

  .input-wrapper {
    @apply flex-1;
  }

  .form-label {
    @apply paragraph-bold text-text-light;
  }
  .custom-btn {
    @apply flex items-center justify-center px-3 py-5 gap-x-2 rounded-xl active:active-press-scale;
  }

  .expense-card {
    @apply screen-x-padding flex-between flex-row py-5 border-b border-border-light active:opacity-60 active:active-press-scale;
  }

  .screen-x-padding {
    @apply px-4;
  }

  .screen-header {
    @apply flex-between flex-row screen-x-padding pt-safe h-32;
  }

  .screen-title {
    @apply text-2xl font-quicksand-bold;
  }

  .screen-header-btn {
    @apply flex flex-row items-center justify-center rounded-full w-14 h-14 p-2.5 active:active-press-scale;
  }

  .tab-icon {
    @apply flex flex-col items-center justify-center min-h-full min-w-20 gap-1;
  }

  .container {
    @apply flex-1 flex flex-col;
  }

  .h1-bold {
    @apply text-3xl font-quicksand-bold;
  }
  .h2-bold {
    @apply text-2xl font-quicksand-bold;
  }

  .h3-bold {
    @apply text-xl font-quicksand-bold;
  }

  .base-bold {
    @apply text-lg font-quicksand-bold !important;
  }

  .base-semibold {
    @apply text-lg font-quicksand-semibold;
  }

  .base-regular {
    @apply text-lg font-quicksand;
  }

  .paragraph-bold {
    @apply text-base font-quicksand-bold;
  }

  .paragraph-semibold {
    @apply text-base font-quicksand-semibold;
  }

  .paragraph-medium {
    @apply text-base font-quicksand-medium;
  }
  .paragraph-regular {
    @apply text-base font-quicksand;
  }
}

